# Horizon-Chargeback

./: .gitignore  AUTHORS  MANIFEST.in  README.rst  karma.conf.js  package.json  setup.cfg  setup.py
chargeback/: dashboard.py
chargeback/api/: __init__.py  chargeback.py
chargeback/api/rest/: __init__.py  chargeback.py  roles.py
chargeback/billingcycles/: panel.py  urls.py  views.py
chargeback/billingcycles/templates/billingcycles/: index.html
chargeback/mypanel/: panel.py  tables.py  tabs.py  urls.py  utils.py  views.py
chargeback/mypanel/templates/mypanel/: index.html
chargeback/payments/: panel.py  urls.py  views.py
chargeback/static/: package.json
chargeback/static/dashboard/: package.json
chargeback/static/dashboard/css/: chargeback.css
chargeback/static/dashboard/widgets/: cbkBalance.directive.js  cbkCloudUsage.directive.js  cycle.directive.js  cycles.directive.html  cycles.directive.js  product.directive.html  (+9 more)
chargeback/templates/chargeback/: base.html
chargeback_dashboard/: __init__.py  dashboard.py
chargeback_dashboard/api/rest/: __init__.py  chargeback.py
chargeback_dashboard/billingcycles/: panel.py  tests.py  urls.py  views.py
chargeback_dashboard/payments/: __init__.py  panel.py  urls.py  views.py
chargeback_dashboard/templates/chargeback/: base.html
enabled/: _1810_chargeback_panel_group.py.example  _18200_remove_panel.py  _1820_project_billing_panel.py.example  _222_mydashboard.py  _50_chargeback.py
mydashboard/: dashboard.py
mydashboard/mypanel/: panel.py  tables.py  tabs.py  urls.py  utils.py  views.py
(+54 files in other folders)
