[metadata]
name = chargeback-dashboard
version = 0.0.1
summary = A panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = Lissete Moscoso
author_email = lissete.moscoso@stackops.com
home-page = http://www.openstack.org/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    chargeback_dashboard
